adding find_package() call

--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -7,5 +7,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup(KEEP_RPATHS)
 
+find_package(graylog-logger REQUIRED)
+
+find_library(GRAYLOG-LOGGER_LIB graylog-logger)
+
 add_executable(example example.cpp)
-target_link_libraries(example ${CONAN_LIBS})
+target_link_libraries(example ${GRAYLOG-LOGGER_LIB})
