--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -1,6 +1,8 @@
 project(PackageTest LANGUAGES CXX)
 cmake_minimum_required(VERSION 3.10.0)
 
+set(CMAKE_CXX_STANDARD 14)
+
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup(KEEP_RPATHS)
 
